# Storage

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  STORAGE.make  TODO_HISTORY.txt  default.nix  imgui.ini  premake5.lua  storage.ini
include/: Assemble.hpp  CSV.hpp  Console.hpp  FileDialog.hpp  Global.hpp  GuiDatabase.hpp  Item.hpp  ItemDatabase.hpp  ProgramState.hpp  ProgramStateDatabase.hpp  ViewHandler.hpp  WebConnection.hpp  program.hpp  utils.hpp
include/Gui/: GuiDatabase.hpp  GuiTable.hpp
include/Language/: English.hpp  German.hpp  Language.hpp
src/: CSV.cpp  Console.cpp  FileDialog.cpp  GuiDatabase.cpp  Item.cpp  ItemDatabase.cpp  ProgramStateDatabase.cpp  ViewHandler.cpp  WebConnection.cpp  main.cpp  program.cpp  utils.cpp
src/Gui/: GuiDatabase.cpp  GuiTable.cpp
